--- a/bootcamp/materials/3-spark-fundamentals/notebooks/DatasetApi.ipynb
+++ b/bootcamp/materials/3-spark-fundamentals/notebooks/DatasetApi.ipynb
@@ -18,8 +18,8 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://120fa5ac9a2d:4041\n",
-       "SparkContext available as 'sc' (version = 3.5.1, master = local[*], app id = local-1734316680820)\n",
+       "Spark Web UI available at http://4bc917fd7660:4040\n",
+       "SparkContext available as 'sc' (version = 3.5.5, master = local[*], app id = local-1753476708194)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "res0: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@442b0b59\n"
+       "res0: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@3d85d39f\n"
       ]
      },
      "execution_count": 1,
@@ -59,7 +59,7 @@
      "data": {
       "text/plain": [
        "import org.apache.spark.sql.SparkSession\n",
-       "sparkSession: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@442b0b59\n",
+       "sparkSession: org.apache.spark.sql.SparkSession = org.apache.spark.sql.SparkSession@3d85d39f\n",
        "defined class Event\n"
       ]
      },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f7190f95-33b1-4779-8f0d-40e9046e8157",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "defined class EventWithDeviceInfo\n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d045ae06-0f21-42f1-a271-f455e95b0879",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "filteredViaSparkSql: org.apache.spark.sql.DataFrame = [user_id: int, device_id: int ... 4 more fields]\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "80517409-a26e-4aa3-b383-56b928f0c9d3",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "combinedViaDatasets: org.apache.spark.sql.Dataset[EventWithDeviceInfo] = [user_id: int, device_id: int ... 7 more fields]\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,14 @@
     "  .map { eventWithDevice =>\n",
     "        // Convert browser_type to uppercase while maintaining immutability\n",
     "        eventWithDevice.copy(browser_type = eventWithDevice.browser_type.toUpperCase)\n",
-    "    }\n"
+    "    }\n",
+    "\n",
+    "//get --> If we confindently know there is no null\n",
+    "//getOrElse --> Like COALESCE() in sql \n",
+    "\n",
+    "// def toUpperCase(s: String): String {\n",
+    "//     return s.toUpperCase()\n",
+    "// }\n"
    ]
   },
   {
