--- a/bootcamp/materials/3-spark-fundamentals/notebooks/bucket-joins-in-iceberg.ipynb
+++ b/bootcamp/materials/3-spark-fundamentals/notebooks/bucket-joins-in-iceberg.ipynb
@@ -2,10 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "374411c5-a48f-4739-9031-d638638633a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Physical Plan ==\n",
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- SortMergeJoin [match_id#144], [match_id#148], Inner\n",
+      "   :- Sort [match_id#144 ASC NULLS FIRST], false, 0\n",
+      "   :  +- Exchange hashpartitioning(match_id#144, 200), ENSURE_REQUIREMENTS, [plan_id=81]\n",
+      "   :     +- BatchScan demo.bootcamp.match_details_bucketed[match_id#144, player_gamertag#145, player_total_kills#146, player_total_deaths#147] demo.bootcamp.match_details_bucketed (branch=null) [filters=match_id IS NOT NULL, groupedBy=] RuntimeFilters: []\n",
+      "   +- Sort [match_id#148 ASC NULLS FIRST], false, 0\n",
+      "      +- Exchange hashpartitioning(match_id#148, 200), ENSURE_REQUIREMENTS, [plan_id=82]\n",
+      "         +- Project [match_id#148, is_team_game#149, playlist_id#150, completion_date#151]\n",
+      "            +- BatchScan demo.bootcamp.matches_bucketed[match_id#148, is_team_game#149, playlist_id#150, completion_date#151] demo.bootcamp.matches_bucketed (branch=null) [filters=completion_date IS NOT NULL, completion_date = 1451606400000000, match_id IS NOT NULL, groupedBy=] RuntimeFilters: []\n",
+      "\n",
+      "\n",
+      "== Physical Plan ==\n",
+      "AdaptiveSparkPlan isFinalPlan=false\n",
+      "+- SortMergeJoin [match_id#54], [match_id#17], Inner\n",
+      "   :- Sort [match_id#54 ASC NULLS FIRST], false, 0\n",
+      "   :  +- Exchange hashpartitioning(match_id#54, 200), ENSURE_REQUIREMENTS, [plan_id=108]\n",
+      "   :     +- Filter isnotnull(match_id#54)\n",
+      "   :        +- FileScan csv [match_id#54,player_gamertag#55,previous_spartan_rank#56,spartan_rank#57,previous_total_xp#58,total_xp#59,previous_csr_tier#60,previous_csr_designation#61,previous_csr#62,previous_csr_percent_to_next_tier#63,previous_csr_rank#64,current_csr_tier#65,current_csr_designation#66,current_csr#67,current_csr_percent_to_next_tier#68,current_csr_rank#69,player_rank_on_team#70,player_finished#71,player_average_life#72,player_total_kills#73,player_total_headshots#74,player_total_weapon_damage#75,player_total_shots_landed#76,player_total_melee_kills#77,... 12 more fields] Batched: false, DataFilters: [isnotnull(match_id#54)], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/home/iceberg/data/match_details.csv], PartitionFilters: [], PushedFilters: [IsNotNull(match_id)], ReadSchema: struct<match_id:string,player_gamertag:string,previous_spartan_rank:int,spartan_rank:int,previous...\n",
+      "   +- Sort [match_id#17 ASC NULLS FIRST], false, 0\n",
+      "      +- Exchange hashpartitioning(match_id#17, 200), ENSURE_REQUIREMENTS, [plan_id=109]\n",
+      "         +- Filter isnotnull(match_id#17)\n",
+      "            +- FileScan csv [match_id#17,mapid#18,is_team_game#19,playlist_id#20,game_variant_id#21,is_match_over#22,completion_date#23,match_duration#24,game_mode#25,map_variant_id#26] Batched: false, DataFilters: [isnotnull(match_id#17)], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/home/iceberg/data/matches.csv], PartitionFilters: [], PushedFilters: [IsNotNull(match_id)], ReadSchema: struct<match_id:string,mapid:string,is_team_game:boolean,playlist_id:string,game_variant_id:strin...\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "import org.apache.spark.sql.functions.{broadcast, split, lit}\n",
+       "matchesBucketed: org.apache.spark.sql.DataFrame = [match_id: string, mapid: string ... 8 more fields]\n",
+       "matchDetailsBucketed: org.apache.spark.sql.DataFrame = [match_id: string, player_gamertag: string ... 34 more fields]\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "// In python use: from pyspark.sql.functions import broadcast, split, lit\n",
@@ -20,18 +64,18 @@
     "                        .csv(\"/home/iceberg/data/match_details.csv\")\n",
     "\n",
     "\n",
-    "spark.sql(\"\"\"DROP TABLE IF EXISTS bootcamp.matches_bucketed\"\"\")\n",
-    "val bucketedDDL = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS bootcamp.matches_bucketed (\n",
-    "     match_id STRING,\n",
-    "     is_team_game BOOLEAN,\n",
-    "     playlist_id STRING,\n",
-    "     completion_date TIMESTAMP\n",
-    " )\n",
-    " USING iceberg\n",
-    " PARTITIONED BY (completion_date, bucket(16, match_id));\n",
-    " \"\"\"\n",
-    " spark.sql(bucketedDDL)\n",
+    "//spark.sql(\"\"\"DROP TABLE IF EXISTS bootcamp.matches_bucketed\"\"\")\n",
+    "//val bucketedDDL = \"\"\"\n",
+    "//CREATE TABLE IF NOT EXISTS bootcamp.matches_bucketed (\n",
+    "//     match_id STRING,\n",
+    "//     is_team_game BOOLEAN,\n",
+    "//     playlist_id STRING,\n",
+    "//     completion_date TIMESTAMP\n",
+    "// )\n",
+    "// USING iceberg\n",
+    "// PARTITIONED BY (completion_date, bucket(16, match_id));\n",
+    "// \"\"\"\n",
+    "// spark.sql(bucketedDDL)\n",
     "\n",
     "// matchesBucketed.select(\n",
     "//     $\"match_id\", $\"is_team_game\", $\"playlist_id\", $\"completion_date\"\n",
@@ -53,28 +97,28 @@
     "// \"\"\"\n",
     "// spark.sql(bucketedDetailsDDL)\n",
     "\n",
-    "// matchDetailsBucketed.select(\n",
-    "//     $\"match_id\", $\"player_gamertag\", $\"player_total_kills\", $\"player_total_deaths\")\n",
-    "//     .write.mode(\"append\")\n",
-    "//   .bucketBy(16, \"match_id\").saveAsTable(\"bootcamp.match_details_bucketed\")\n",
+    " matchDetailsBucketed.select(\n",
+    "     $\"match_id\", $\"player_gamertag\", $\"player_total_kills\", $\"player_total_deaths\")\n",
+    "     .write.mode(\"append\")\n",
+    "   .bucketBy(16, \"match_id\").saveAsTable(\"bootcamp.match_details_bucketed\")\n",
     "\n",
-    "spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", \"-1\")\n",
+    " spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", \"-1\")\n",
     "\n",
-    "matchesBucketed.createOrReplaceTempView(\"matches\")\n",
-    "matchDetailsBucketed.createOrReplaceTempView(\"match_details\")\n",
+    " matchesBucketed.createOrReplaceTempView(\"matches\")\n",
+    " matchDetailsBucketed.createOrReplaceTempView(\"match_details\")\n",
     "\n",
-    "spark.sql(\"\"\"\n",
+    " spark.sql(\"\"\"\n",
     "    SELECT * FROM bootcamp.match_details_bucketed mdb JOIN bootcamp.matches_bucketed md \n",
     "    ON mdb.match_id = md.match_id\n",
     "    AND md.completion_date = DATE('2016-01-01')\n",
     "        \n",
-    "\"\"\").explain()\n",
+    " \"\"\").explain()\n",
     "\n",
     "\n",
-    "spark.sql(\"\"\"\n",
+    " spark.sql(\"\"\"\n",
     "    SELECT * FROM match_details mdb JOIN matches md ON mdb.match_id = md.match_id\n",
     "        \n",
-    "\"\"\").explain()\n",
+    " \"\"\").explain()\n",
     "\n",
     "// spark.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", \"1000000000000\")\n",
     "\n",
